--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit
-openai
-PyPDF2
-pandas
-Pillow
-faiss-cpu
-tiktoken
-python-dotenv
+streamlit==1.49.1
+openai==1.107.3
+PyPDF2==3.0.1
+pillow==10.0.0
+pandas==2.3.2
