--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit
-openai
-PyPDF2
-pillow
-pandas
+streamlit==1.49.1
+openai>=1.37.0
+pandas>=2.2.2
+Pillow>=10.4.0
+PyPDF2>=3.0.1
+python-dotenv>=1.0.1
+requests>=2.32.3
+numpy>=1.26.4
